<resources>
    <string name="app_name">eKincare</string>
    <string name="facebook_app_id">296885943832017</string>
    <string name="no_data_document_message">You can upload diagnostic reports,medicine prescriptions,discharge case sheets etc.</string>
    <string name="no_data_assessment_message">Please upload your diagnostic reports, medicine prescriptions,discharge case sheets etc.</string>
    <string name="no_data_allergie_message">No Allergies.</string>
    <string name="no_data_medication_message">You do not have any \n medication yet.</string>
    <string name="no_slots_message">No slots available.\n Please select another date.</string>
    <string name="no_notification">We will notify you as soon as you have\n a new notification</string>
    <string name="action_settings">Settings</string>
    <string name="tools">Request Blood</string>
    <string name="dataUsage">Data usage</string>
    <string name="wifiOnlySetting">Alert me if wifi is off</string>
    <string name="signOut">Sign Out</string>
    <string name="refresh">Refresh</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="bp_family">Update blood pressure</string>
    <string name="bg_family">Update random blood glucose</string>
    <string name="ok">Ok</string>
    <string name="requiredMobileOTP">Please enter your mobile number and OTP!</string>
    <string name="requiredMobileName">Please enter your mobile number</string>
    <string name="error">Error</string>
    <string name="networkloss">There was a problem connecting to the server.Please check your connectivity and try again.</string>
    <string name="otherformatsnotsupport">Current version of the application only supports images and pdf</string>
    <string name="notsupport">Current version of application does not support uploading of documents from google drive. Sorry for inconvenience provided.</string>
    <string name="occasional">Occasionally</string>
    <string name="often">Frequently</string>
    <string name="never">Never</string>
    <string name="ekinCare">eKincare</string>
    <string name="last_updated">Last updated  </string>
    <string name="weight_validation_msg">Hey! You missed giving the weight value. Please enter it before filling next vitals</string>
    <string name="height_validation_msg">Hey! You missed giving the feet and inch values. Please enter it before filling next vitals</string>
    <string name="bp_validation_msg">Hey! You misses giving the systolic or diastolic values.</string>
    <string name="done">Done</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="hypertension">Hypertension</string>
    <string name="diabetes">Diabetes</string>
    <string name="cancer">Cancer</string>
    <string name="cardioDisease">Cardio disease</string>
    <string name="none">None</string>
    <string name="dashboard_page1"> INDIA\'S FIRST HEALTH CHAT BOT</string>
    <string name="dashboard_page2"> TRACK YOUR HEALTH</string>
    <string name="dashboard_page3"> GET INSIGHTS</string>
    <string name="smart">DIGITIZE YOUR HEALTH RECORDS</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="verify_and_continues">VERIFY &amp; CONTINUE</string>
    <string name="mm_hg">mmHg</string>
    <string name="mm_dl">mm/dL</string>
    <string name="RewardsReferrals">Rewards &amp; Referrals</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="risk_captiontext">WELLNESS SCORE</string>
    <string name="waist_error">Please enter waist value</string>
    <string name="waist_error1">Please enter bloodgroup value</string>
    <string name="risk_diabetes_caption"> The eKincare wellness score is a single score representative of your overall health. Wellness score helps you get actionable insights on the areas you need to focus on, to improve your health.</string>
    <string name="edit">Edit</string>
    <string name="trends">Trends</string>
    <string name="blood_sos">Blood SOS</string>
    <string name="packages">Packages</string>
    <string name="resend_code_msg"><![CDATA[ If you`ve not received the code, <b><font color=#428BCA> <u>Click here</u></b> to receive]]></string>
    <string name="bloodsos_info">Blood SOS maps and sends out an SMS seeking donation from matching blood groups within 10KM distance when you are in need.</string>
    <string-array name="water_benefits" formatted="false">
        <item>Staying hydrated can reduce risk of colon cancer by 45% and bladder cancer by 50%.</item>
        <item>If you don\'t drink water,you will die.It\'s that important. We can live only a few days without water ;maybe a week.</item>
        <item>Dehydration can affect your mood and make you grumpy and confused.Think clearer and be happier by drinking more water.</item>
        <item>Drinking water contributes to increased athletic performance. Water composes 75% of our muscle tissue!</item>
        <item>Digestive system needs water to flush out waste in the form of urine and sweat</item>
        <item>Sometimes headaches can be caused by dehydration. Next time your head hurts,try drinking water first.</item>
        <item>Regular water consumption can improve the color and texture of your skin by keeping it building new cells properly.</item>
        <item>Drinking water helps the skin, the largest organ in the body, to do it\'s job of regulating the body\'s temperature through sweating.</item>
        <item>Water is essential for the proper circulation of nutrients in the body. Drink water,Stay Hydrated.</item>
        <item>Drinking water can reduce pain in your joints by keeping the cartilage soft and hydrated.</item>
        <item>Drinking Adequate water keeps things flowing along your gastrointestinal tract and prevents constipation. Water Helps Maintain Normal Bowel Function.</item>
        <item>If you\'re feeling drained and depleted, get a pick-me-up with water. Dehydration makes you feel tired.</item>
        <item>Drinking water helps prevent muscle cramping and lubricates joints in the body.When you\'re well hydrated, you can exercise longer and stronger.</item>
        <item>People aren\'t drinking enough water leading in the rise of kidney stones.Kidney stones can\'t form in diluted urine, so reduce your risk with plenty of water!</item>
        <item>Waters ability to release heat from the body when sweat evaporates from the surface of the skin greatly helps maintain an even body temperature.</item>
        <item>Drinking water is an effective way to get rid of hangover. Alcohol dehydrates the body.Water helps rehydrate the body and speed up recovery.</item>
        <item>Bad breath is a clear sign that you aren\’t drinking enough water.It keeps your mouth moist,washes and dilutes the smelly compounds that oral bacteria create.</item>
        <item>Drinking warm water every morning is very beneficial for women as it can prevent premature aging.</item>
        <item>Drinking hot water is an excellent natural remedy for colds,coughs and sore throat.It relieves sore throat and also helps in clearing nasal congestion.</item>
        <item>Drinking water cleanses your body and eliminates the root causes of acne-related infections.</item>
        <item>Drinking hot water is also good for obtaining soft, shiny hair. It energizes the nerve endings in your hair roots and makes them active.</item>
        <item>Drinking water along with lemon helps fight viral infection.</item>
        <item>Good hydration can prevent arthritis. With plenty of water in your body, there is less friction in your joints, thus less chance of developing arthritis.</item>
        <item>Drinking water develops and supports healthy brain cells. </item>
        <item>Drinking water improves concentration and maintains memory function.</item>
        <item>Water contains minerals like calcium and magnesium which is necessary for the body.</item>
        <item>By the time you feel thirsty, your body has lost more than 1 percent of its total water – so let\’s not feel thirst. Take a break right now and have a glass of water.</item>
        <item>Water is in lymph, a fluid that is part of your immune system, which helps you fight off illness.</item>
        <item>Drink Water as 2% drop in body water can cause fuzzy short-term memory,trouble with basic math and difficulty focusing on the computer screen or a printed page.</item>
        <item>One glass of water shuts down midnight hunger pangs for almost 100% of the dieters investigated in a University of Washington study.</item>
        <item>Drink water because even MILD dehydration will slow down one\'s metabolism as much as 3%.</item>
        <item>Lack of water is the no. 1 trigger of daytime fatigue. Stay fit, Drink Water.</item>
        <item>Good water intake prevents the skin from sagging. Drink water for a healthy skin.</item>
        <item>Drink water because A 2% reduction of water levels in the body can lead to a 20% decrease in mental and physical performance.</item>
        <item>Drink water.Not drinking water will lead to muscle spasms</item>
        <item>study shows that drinking a half litre of water half an hour before meals helps people eat fewer calories and lose 44% more weight.</item>
        <item>Drink water as lack of water causes mood swings</item>
        <item>Not drinking enough water increases the probability of you having health problems. </item>
        <item>Drinking water carries heat away from the internal organs hence protecting you from heat stroke.</item>
        <item>Water is one of the best cure for hangovers as it nullifies dehydration caused by alcohol.</item>
        <item>Drinking ice-cold water before and during exercise can improve endurance by 23 % as it forces the body to expend calories warming it up.</item>
    </string-array>
    <string-array name="relations" formatted="false">
        <item>Spouse</item>
        <item>Father</item>
        <item>Mother</item>
        <item>Sibling</item>
        <item>Child</item>
        <item>Other</item>
    </string-array>
    <string name="internet_not_available">Internet Not Available!</string>
    <string name="appointment">Appointment History</string>
    <string name="settings">Settings</string>
    <string name="information">INFORMATION</string>
    <string name="bloodlbl">Your current health status</string>
    <string name="timely_remind">RECEIVE TIMELY REMINDERS</string>
    <string name="add_family_member">ADD FAMILY MEMBERS</string>
    <string name="health_checkup">SCHEDULE HEALTH CHECKUPS</string>
    <string name="track_records">TRACK YOUR HEALTH</string>
    <string name="sign_in_text">Sign In</string>
    <string name="register_text">Register</string>
    <string name="sign_up_text">Signup</string>
    <string name="project_number">1006237285130</string>
    <string name="notification_number">1337</string>
    <string name="blood_sos_request">Blood SOS Request</string>
    <string name="blood_sos_which_blood_group">Which blood group are you looking for</string>
    <string name="notification_wizard">Complete profile</string>
    <string name="notification_vaccation">Vaccination Reminder</string>
    <string name="validate_your_number">We are sending an otp to validate \n your mobile number. Hang on!</string>
    <string name="did_not_receive_otp">Did not receive OTP?</string>
    <string name="resend_otp_to_verify_number">Resend otp to verify number</string>
    <string name="resend">Resend Code</string>
    <string name="resend_sms">Sms</string>
    <string name="little_about_your_lifestyle">A little about your lifestyle</string>
    <string name="exercise_wizard">Exercise</string>
    <string name="smoking_wizard">Smoking</string>
    <string name="alcohol_wizard">Alcohol</string>
    <string name="life_style_recommended">Lifestyle inputs help us recommend you relevant health tips and challenges</string>
</resources>