<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_16"
    android:background="@color/chat_box_solid">

    <LinearLayout
        android:id="@+id/diseaseGroupRow1Father"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_8"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/hypertension_checkboxFather"
            style="@style/CheckBoxTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginRight="@dimen/margin_10"
            android:layout_weight="1"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/hypertension"
            android:textColor="@color/black_semi_transparent" />

        <CheckBox
            android:id="@+id/diabetes_checkboxFather"
            style="@style/CheckBoxTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:layout_weight="1"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/diabetes"
            android:textColor="@color/black_semi_transparent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/diseaseGroupRow2Father"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/diseaseGroupRow1Father"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_8"

        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cardio_disease_checkboxFather"
            style="@style/CheckBoxTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginRight="@dimen/margin_10"
            android:layout_weight="1"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/cardioDisease"
            android:textColor="@color/black_semi_transparent" />

        <CheckBox
            android:id="@+id/cancer_checkboxFather"
            style="@style/CheckBoxTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:layout_weight="1"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/cancer"
            android:textColor="@color/black_semi_transparent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/diseaseGroupRow3Father"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/diseaseGroupRow2Father"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_8"

        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/bloodpressure_checkboxFather"
            style="@style/CheckBoxTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginRight="@dimen/margin_10"
            android:layout_weight="1"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/blood_pressure"
            android:textColor="@color/black_semi_transparent" />

        <CheckBox
            android:id="@+id/none_checkboxFather"
            style="@style/CheckBoxTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:layout_weight="1"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/none"
            android:textColor="@color/black_semi_transparent" />

    </LinearLayout>

</RelativeLayout>




